# space-cadet

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md
cmake/: env.cmake
include/spacecadet/: main_game.hpp
resources/models/planet1/: planet.mtl
resources/models/spaceships/simple/: simple_spaceship.mtl
resources/shaders/: default.frag  default.geom  default.vert  skybox.frag  skybox.geom  skybox.vert
src/: CMakeLists.txt  main.cpp  main_game.cpp
